authentication , shared pref to keep logged in , navigation bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="register">Register</string>
     <string name="name">Name</string>
     <string name="do_not_have_an_account_sign_up">Do not have an account ? Sign Up</string>
+    <string name="tokenG">698206728933-5vklao7k9hsmej4khf6hf661890u8e1k.apps.googleusercontent.com</string>
 </resources>
