--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,9 @@
     <string name="add_to_favourite">Add to favourite</string>
     <string name="instructions">Instructions</string>
     <string name="add_to_your_plan">Add to your plan</string>
+    <string name="the_meal_name">The Meal name</string>
+    <string name="area">Area</string>
+    <string name="remove">Remove</string>
+    <string name="ingredients">Ingredients</string>
+    <string name="your_favourites">Your Favourites</string>
 </resources>
